# libsql_ruby

./: .gitignore  Cargo.toml  Gemfile  LICENSE.txt  README.md  Rakefile  cbindgen.toml  libsql.gemspec  rubocop.yml
.github/: main.yml
.github/workflows/: main.yml
ext/: exconf.rb
ext/libsql/: Cargo.toml  bindings.h  extconf.rb  libsql.c
ext/libsql/native/: libsql.c
ext/libsql/src/: build.rs  database.rs  errors.rs  lib.rs  mod.rs  nogvl.rs
ext/libsql/src/connection/: mod.rs  remote.rs  runtime.rs
lib/: libsql.rb  libsqlite.rb  version.rb
lib/libsql/: database.rb  errors.rb  hello.rb  pragma.rb  version.rb
pkg/: libsql-0.0.1.gem
sig/: libsql.rbs
spec/: database_spec.rb  errors_spec.rb  libsql_spec.rb  spec_helper.rb
src/: lib.rs  types.rs
