[package]
name = "libsql-ruby"
version = "0.0.1"
description = "ruby interface for libsql"
edition = "2021"
authors = ["Haile Lagi <hailelagi@gmail.com>"]
license = "MIT"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
cbindgen = "0.20"

[dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
lazy_static = "1.4.0"
libsql = { version = "0.3.5", features = ["remote", "replication", "core", "encryption"] }
once_cell = "1.19.0"
serde = { version = "1.0.199", features = ["derive"]}
serde_json = "1.0.116"
tokio = "1.37.0"
uuid = "1.8.0"
libc = "0.2.155"

[profile.release]
debug = false
strip = true
panic = "abort"
