[package]
name = "libsql"
version = "0.1.0"
description = "ruby interface for libSQL"
edition = "2021"
authors = ["Haile Lagi <52631736+hailelagi@users.noreply.github.com>"]
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
bytes = "1.5.0"
lazy_static = "1.4.0"
tokio = { version = "1.29.1", features = [ "rt-multi-thread" ] }
magnus = { version = "0.6.2" }
hyper-rustls = { version = "0.25", features = ["webpki-roots"]}
tracing-subscriber = { version = "0.3", features = ["env-filter"] } 
libsql = { version = "0.3.5", features = ["remote", "replication", "core", "encryption"] }
once_cell = "1.19.0"
serde = { version = "1.0.199", features = ["derive"]}
serde_json = "1.0.116"
uuid = "1.8.0"
rb-sys = "0.9.98"

[profile.release]
debug = false
strip = true
panic = "abort"

